model tests and refactoring

--- a/config/sidekiq.yml
+++ b/config/sidekiq.yml
@@ -11,7 +11,7 @@
 # even put in dynamic logic, like a host-specific queue.   - <%= `hostname`.strip %>
 # http://www.mikeperham.com/2013/11/13/advanced-sidekiq-host-specific-queues/
 :queues:
-  - reports
+  - default
   - low
 
 # - critical
