--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -12,6 +12,7 @@ AllCops:
    - 'script/**/*'
    - 'spec/rails_helper.rb'
    - 'vendor/**/*'
+   - 'spec/factories/**/*.rb'
 
 Style/FrozenStringLiteralComment:
   Enabled: false
